# ihcr_Unitree_rl_lab

./: README.md  Readme_Tianhu.md  isaaclab310_full.yaml
deploy/include/FSM/: State_RLBase.h
deploy/include/isaaclab/envs/mdp/: observations.h
deploy/include/isaaclab/envs/mdp/depth/: depth_utils.h
deploy/include/isaaclab/manager/: observation_manager.h
deploy/robots/g1/: CMakeLists.txt  main.cpp
deploy/robots/g1/config/: config.yaml
deploy/robots/g1/config/policy/motion_tracking/exported/: policy.onnx
deploy/robots/g1/config/policy/motion_tracking/motion_reference/: G1_sim_retargeted_result.npy
deploy/robots/g1/config/policy/motion_tracking/params/: deploy.yaml
deploy/robots/g1/config/policy/velocity/v0/params/: deploy.yaml
deploy/robots/g1/config/policy/velocity/vision/exported/: policy.onnx
deploy/robots/g1/config/policy/velocity/vision/params/: deploy.yaml
deploy/robots/g1/include/depth_ipc/: depth_shm_protocol.hpp
deploy/robots/g1/include/ipc/: depth_shm_reader.hpp
deploy/robots/g1/src/: State_RLBase.cpp  obs_demo_npy.cpp
deploy/robots/g1/src/vision/: depth_ipc_demo.cpp  depth_utils.cpp
deploy/robots/go2/: CMakeLists.txt
deploy/scripts/: export_onnx_fixed.py
scripts/rsl_rl/: play.py  usd_diff_structure.py
source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py  rsl_rl_ppo_scan_runner.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/mdp/: observations.py  rewards.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/g1/29dof/: __init__.py  rough_env_distillation_cfg.py  velocity_env_cfg.py  velocity_env_distillation_cfg.py
source/unitree_rl_lab/unitree_rl_lab/utils/: actor_critic_scan.py
